Inicio de Widgets

--- a/JavacriptGeneralSamples/Html Only/JQuery.UI/ColorAnimation.html
+++ b/JavacriptGeneralSamples/Html Only/JQuery.UI/ColorAnimation.html
@@ -18,8 +18,8 @@
     <label for="green-value">Verde</label><input type="text" id="green-value" value="255" name="green-value" />
     <label for="blue-value">Azul</label><input type="text" id="blue-value" value="255" name="blue-value" />
     <button id="animation-trigger">Animar Color!</button>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+    <script src="../js/jquery-2.0.3.js"></script>
+    <script src="../js/jquery-ui-1.10.3.js"></script>
     <script type="text/javascript">
         function getRandomInt(min, max) {
             return Math.floor(Math.random() * (max - min + 1)) + min;
