--- a/JavacriptGeneralSamples/Html Only/JQuery.UI/EffectSample.html
+++ b/JavacriptGeneralSamples/Html Only/JQuery.UI/EffectSample.html
@@ -20,10 +20,13 @@
         <option value="size">Size</option>
         <option value="scale">Scale</option>
         <option value="shake">Shake</option>
+        <option value="clip">Clip</option>
     </select>
     <button id="toggle-trigger">Toggle!</button>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+    <!--<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>-->
+    <script src="../js/jquery-2.0.3.js"></script>
+    <script src="../js/jquery-ui-1.10.3.js"></script>
     <script type="text/javascript">
         $(document).ready(function ()
         {
