--- a/JavacriptGeneralSamples/Html Only/JQuery.UI/EasingAlgorithComparison.html
+++ b/JavacriptGeneralSamples/Html Only/JQuery.UI/EasingAlgorithComparison.html
@@ -161,8 +161,8 @@
         <span class="easing-type">blah</span>
         <div class="ball"></div>
     </div>    
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+    <script src="../js/jquery-2.0.3.js"></script>
+    <script src="../js/jquery-ui-1.10.3.js"></script>
     <script type="text/javascript">
         function animateRacer(racer, leftPosition, duration, easing) {
             racer.animate({ 'left': leftPosition }, duration, easing, function () { racer.animate({ 'left': 0 }, duration, easing); });
