--- a/JavacriptGeneralSamples/Html Only/JQuery.UI/Widgets/Datepicker.html
+++ b/JavacriptGeneralSamples/Html Only/JQuery.UI/Widgets/Datepicker.html
@@ -54,7 +54,11 @@
                 {
                     altField: '#selected-date',
                     dayNames: ["Domingo", "Lunes", "Martes", "Miercoles", "Jueves", "Viernes", "Sabado"],
+                    dayNamesMin: ["Do", "Lu", "Ma", "Mi", "Ju", "Vi", "Sa"],
+                    dayNamesShort: ["Dom", "Lun", "Mar", "Mir", "Jue", "Vie", "Sab"],                  
                     monthNames: ["Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre"],
+                    monthNamesShort: ["Ene", "Feb", "Mar", "Abr", "May", "Jun", "Jul", "Ago", "Sep", "Oct", "Nov", "Dic"],
+                    monthNamesMin: ["En", "Fe", "Ma", "Ab", "Ma", "Ju", "Ju", "Ag", "Se", "Oc", "No", "Di"],
                     showOtherMonths: true,
                     yearRange: '1985:2013',
                     showButtonPanel: true,
