-Ejemplos de llamados de ajax -Implementacion de servicio wcf est

--- a/JavacriptGeneralSamples/Html Only/JqueryRobot/index.html
+++ b/JavacriptGeneralSamples/Html Only/JqueryRobot/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Hola, Soy el JQRobot!</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/robot.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/Html Only/jqueryRobot/css/robot.css" />
 </head>
 <body id="home">
     <div id="wrapper">
